deploy/prod/111-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: document
 namespace: green-prod
 labels:
  name: document
spec:
  replicas: 1
  template:
    metadata:
      name: document
      namespace: green-prod
      labels:
        tier: backend
        lang: nodejs
        name: documentservice
    spec:
      containers:
        - name: document
          image: nexussrv.office.traffics-switch.de:9843/traffics/documentservice
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /alive
              port: web
            initialDelaySeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /alive
              port: web
            initialDelaySeconds: 3
            periodSeconds: 30
          volumeMounts:
            - name: trafficsinternalrootcacrt
              mountPath: "/etc/traffics/ssl/"
              readOnly: true
            - name: authserviceconfig
              mountPath: "/etc/authservice/config/"
              readOnly: true
          ports:
          - name: web
            containerPort: 3010
      volumes:
        - name: trafficsinternalrootcacrt
          secret:
            secretName: traffics-internal-root-ca-crt
        - name: authserviceconfig
          secret:
            secretName: auth-service-config
      imagePullSecrets:
        - name: nexusregisterykey
