deploy/prod/222-service.yaml
kind: Service
apiVersion: v1
metadata:
 name: prrservice
 namespace: green-prod
 labels:
   name: prr
spec:
 selector:
   tier: backend
   name: prrservice
 type: ClusterIP
 ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3010
