deploy/prod/333-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: prrservice
  namespace: green-prod
  labels:
    name: prr
spec:
  rules:
  - host: prr.internal.traffics-switch.de
    http:
      paths:
      - path: /
        backend:
          serviceName: prrservice
          servicePort: 80
